--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
+    "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
