--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
-  "include": ["src", "eslint.config.mjs", "vite.config.ts"],
+  "include": ["src", "eslint.config.js", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
