--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,12 +4,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-
-    "baseUrl": "src",
-    "paths": {
-      "@/*": ["*"]
-    }
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts", "eslint.config.mjs"]
 }
