--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
