--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "uuid": "^11.0.3",
     "vite-plugin-svgr": "^4.3.0",
